Fixed .fit--stretch height bug on ie8

--- a/objects/_fit.scss
+++ b/objects/_fit.scss
@@ -56,8 +56,7 @@
 .fit--stretch{
   > img, > .fit__target {
     width: 100%;
-    max-height: none;
-    min-height: 100%;
+    height: 100%;
   }
 }
 
